# discovery-metadata-catalog-ingestor

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  codecov.yml  dmci-component-diagram.puml  dmci_start_api.py  example_config.yaml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  start_api.py
.github/: pull_request_template.md
.github/workflows/: container.yml  pytest.yml  syntax.yml
container/: .dodsrc  Dockerfile  Dockerfile.alpine  README.md  config.yaml  wsgi.py
dmci/: __init__.py  config.py  distribute.py  distributor.py  worker.py
dmci/api/: README.md  __init__.py  api.py  app.py  worker.py
dmci/assets/: README.md
dmci/distributors/: __init__.py  distributor.py  file_dist.py  git_dist.py  pycsw_dist.py  solr_dist.py
dmci/mmd_tools/: __init__.py  check_mmd.py  test_check_mmd.py
dmci/pycsw_dist/: pycsw_dist.py
dmci/tools/: __init__.py  check_mmd.py
tests/: conftest.py  test_api.py  test_dummy.py  tools.py
tests/files/api/: aqua-modis-parent.xml  dev.xml  failing.xml  parse_failing.xml  passing.xml  passing_wlandingpage.xml  passing_wlandingpage_wotherrelatedinfo.xml  passing_wnometnamespace.xml  passing_wrelatedinfo_nolandingpage.xml  staging.xml  test.xml
tests/files/core/: config.yaml
tests/files/mmd/: mmd.xsd  parent-uuid-list.xml
tests/files/mock/: mock.xml  mock.xsd  mock.xslt
tests/files/reference/: mmd_file.xml  parent_translated.xml  pycsw_dist_translated.xml
tests/test_api/: api_test_config.yaml  test_api.py  test_app.py  test_worker.py
tests/test_core/: test_config.py  test_init.py  test_worker.py
tests/test_dist/: test_distributor.py  test_file_dist.py  test_git_dist.py  test_pycsw_dist.py  test_solr_dist.py
tests/test_mmd_tools/: test_mmd_tools.py
