[metadata]
name = dmci
version = attr: dmci.__version__
author = MET Norway
author_email = servicedesk@met.no
description = Discovery MetaData Catalog Ingestor
url = https://github.com/metno/discovery-metadata-catalog-ingestor
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
project_urls =
    Source Code = https://github.com/metno/discovery-metadata-catalog-ingestor

[options]
python_requires = >=3.6
include_package_data = True
packages = find:
scripts = start_api.py
test_suite = tests
install_requires =
    requests
    pythesint @ git+https://github.com/metno/py-thesaurus-interface@f43f9ec70131fcbb46f129ea566a0ca241b3ba67
    pyyaml
    flask
    lxml

[options.data_files]
example = example_config.yaml

[bdist_wheel]
universal = 0

[flake8]
ignore = E203,E221,E226,E228,E241,E251,E261,E266,E302,E305
max-line-length = 99
