[metadata]
name = dmci
version = attr: dmci.__version__
author = MET Norway
author_email = servicedesk@met.no
description = Discovery MetaData Catalog Ingestor
url = https://github.com/metno/discovery-metadata-catalog-ingestor
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
project_urls =
    Source Code = https://github.com/metno/discovery-metadata-catalog-ingestor

[options]
python_requires = >=3.6
include_package_data = True
packages = find:
scripts = dmci_start_api.py
install_requires =
    metvocab @ git+https://github.com/metno/met-vocab-tools@v1.1
    solrindexer @ git+https://github.com/metno/solr-indexer@v2.0.1-senda
    requests>=2.22
    pyyaml>=5.1
    flask>=1.0
    lxml>=4.2.0

[options.data_files]
usr/share/doc/dmci =
  example_config.yaml
  README.md

[bdist_wheel]
universal = 0

[flake8]
ignore = E221,E226,E228,E241
max-line-length = 99
